--- a/SmartLock/BachServer/JPANoSQLThermalComfortApp-master/src/main/webapp/WEB-INF/web.xml
+++ b/SmartLock/BachServer/JPANoSQLThermalComfortApp-master/src/main/webapp/WEB-INF/web.xml
@@ -27,49 +27,43 @@ THE SOFTWARE.
          xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          version="2.5">
-
+ 
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
-
+ 
     <servlet>
         <servlet-name>jersey-services</servlet-name>
-        <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
-            <param-name>com.sun.jersey.config.property.packages</param-name>
-            <param-value>co.edu.uniandes.isis2503.nosqljpa.service</param-value>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>co.edu.uniandes.isis2503.nosqljpa.service;co.edu.uniandes.isis2503.nosqljpa.authentificacion</param-value>
+            <param-value>co.edu.uniandes.isis2503.nosqljpa.service;co.edu.uniandes.isis2503.nosqljpa.auth</param-value>
         </init-param>
         <init-param>
             <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
             <param-value>true</param-value>
         </init-param>
-        
-          
         <servlet-name>CORS Filter</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>javax.ws.rs.container.ContainerResponseFilter</param-name>
-            <param-value>co.edu.uniandes.isis2503.nosqljpa.authentificacion.CORSFilter</param-value>
+            <param-value>co.edu.uniandes.isis2503.nosqljpa.auth.CORSFilter</param-value>
         </init-param>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>javax.ws.rs.container.ContainerRequestFilter</param-name>
-            <param-value>co.edu.uniandes.isis2503.nosqljpa.authentificacion.AuthenticationFilter</param-value>
+            <param-value>co.edu.uniandes.isis2503.nosqljpa.auth.AuthenticationFilter</param-value>
         </init-param>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>javax.ws.rs.container.ContainerRequestFilter</param-name>
-            <param-value>co.edu.uniandes.isis2503.nosqljpa.authentificacion.AuthorizationFilter</param-value>
+            <param-value>co.edu.uniandes.isis2503.nosqljpa.auth.AuthorizationFilter</param-value>
         </init-param>
-  
-        
     </servlet>
-
+ 
     <servlet-mapping>
         <servlet-name>jersey-services</servlet-name>
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
-
+ 
 </web-app>
