--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 /SmartLock/BachServer/JPANoSQLThermalComfortApp-master/target/
+/paginaweb/LabPaginacionWeb-master/HTML5Application/nbproject/private/
+/paginaweb/HTML5Application1/nbproject/private/
+/paginaweb/LabPaginacionWeb-master/nbproject/private/
+/paginaweb/LabPaginacionWeb-master/AppMundialFront/nbproject/private/
+/paginaweb/MockServer/MockServer/target/
+/paginaweb/LabPaginacionWeb-master/MockServer/MockServer/target/
+/paginaweb/LabPaginacionWeb-master/webpage/nbproject/private/
